--- a/symfony/z.yml
+++ b/symfony/z.yml
@@ -1,3 +1,5 @@
+# @version ">=2.0"
+
 symfony: ~
 
 tasks:
@@ -10,7 +12,7 @@ tasks:
         cd $(build.dir) && composer install --no-scripts --prefer-dist;
 
     _symfony.build.assets_install: |
-        cd $(build.dir) && php $(symfony.console) assets:install $(symfony.web) --env=$(target_env) --no-debug;
+        cd $(build.dir) && php $(symfony.console) assets:install $(symfony.web) --env=$(target_env) --no-debug $(symfony.assets_symlink ? "--symlink");
 
     _symfony.build.assetic_dump: |
         cd $(build.dir) && php $(symfony.console) assetic:dump --env=$(target_env) --no-debug;
@@ -33,9 +35,12 @@ tasks:
             Tail the logs at the specified environment.
 
             If run in verbose mode, the logs are cat'ed.
-        set:
+        args:
             target_env: ?
             level: ? ""
+            _cmd: verbose ? "cat" : sprintf("tail %s", follow ? "-f" : "")
+        flags:
+            follow: false
         do: |
             ssh $(envs[target_env].ssh) \
                 "$(verbose ? "cat" : "tail") $(envs[target_env].root)app/logs/$(target_env).log"
