--- a/symfony/z.yml
+++ b/symfony/z.yml
@@ -9,7 +9,7 @@ tasks:
         fi;
 
     _symfony.build.composer_install: |
-        cd $(build.dir) && composer install --no-scripts --prefer-dist;
+        cd $(build.dir) && composer install --no-scripts --prefer-dist --optimize-autoloader;
 
     _symfony.build.assets_install: |
         cd $(build.dir) && php $(symfony.console) assets:install $(symfony.web) --env=$(target_env) --no-debug  --relative;
