--- a/symfony/z.yml
+++ b/symfony/z.yml
@@ -13,7 +13,7 @@ tasks:
         cd $(build.dir) && php $(path(symfony.root, symfony.console)) assetic:dump --env=$(target_env) --no-debug;
 
     _symfony.env.flush_cache: |
-        @(sh ssh(target_env)) rm -rf $(envs[target_env].root)cache/$(target_env) && php $(path(envs[target_env].root, symfony.root, symfony.console)) cache:warmup --env=$(target_env) --no-debug
+        @(sh ssh(target_env)) rm -rf $(envs[target_env].root)app/cache/$(target_env) && php $(path(envs[target_env].root, symfony.root, symfony.console)) cache:warmup --env=$(target_env) --no-debug
 
     build:
         post:
