--- a/symfony/z.yml
+++ b/symfony/z.yml
@@ -4,7 +4,7 @@ symfony: ~
 
 tasks:
     _symfony.build.composer_install: |
-        cd $(build.dir) && composer install --no-scripts --prefer-dist --optimize-autoloader --no-dev --no-suggest --no-progress --no-interaction
+        cd $(build.dir) && composer install --no-scripts --prefer-dist --optimize-autoloader --no-dev --no-suggest --no-progress
 
     _symfony.build.assets_install: |
         cd $(build.dir) && $(defaults("php_bin", target_env, "php")) $(path(symfony.root, symfony.console)) assets:install $(symfony.web) --env=$(target_env) --no-debug --symlink --relative;
